--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ h1, h2, h3 {
   height: 100%;
 }
 
-/* Fork on GitHub ribbon via https://codepo8.github.io/css-fork-on-github-ribbon/# */  
+/* Fork on GitHub ribbon via https://codepo8.github.io/css-fork-on-github-ribbon/# */
 #forkongithub a{
 	background:#00F;
 	color:#fff;
@@ -111,18 +111,28 @@ font-size: 120%;
 path {
 	fill: none;
 	stroke: #ed3700;
+	stroke-width: 10;
 }
 
 path.line-0 {
 fill: none;
 stroke: #ed3700;
+opacity: 0.5;
+stroke-width: 10;
 }
 
 path.line-1 {
 fill: none;
 stroke: #2b2929;
-stroke-dasharray: 2;
+opacity: 0.5;
+stroke-width: 10;
 }
+
+.highlight {
+	opacity: 1;
+	stroke-width: 15;
+}
+
 
 .serie_label {
 fill: #2b2929;
