--- a/style.css
+++ b/style.css
@@ -84,6 +84,13 @@ h1, h2, h3 {
   display: flex;
 }
 
+.legend-holder {
+	border: 1px solid black;
+	height: 20%;
+	padding: 5px 5px 5px 5px;
+	font-family: Georgia;
+}
+
 .linechart-holder {
   flex: 0 0 50%;
 }
@@ -116,35 +123,35 @@ font-size: 120%;
 path {
 	fill: none;
 	stroke: #ed3700;
-	stroke-width: 10;
+	stroke-width: 7;
 }
 
 path.line-0 {
 fill: none;
 stroke: #0000ff;
 opacity: 0.5;
-stroke-width: 10;
+stroke-width: 7;
 }
 
 path.line-1 {
 fill: none;
 stroke: #008000;
 opacity: 0.5;
-stroke-width: 10;
+stroke-width: 7;
 }
 
 .highlight_0 {
 fill: none;
 stroke: #0000ff;
 opacity: 1;
-stroke-width: 15;
+stroke-width: 8;
 }
 
 .highlight_1 {
 fill: none;
 stroke: #008000;
 opacity: 1;
-stroke-width: 15;
+stroke-width: 8;
 }
 
 .serie_label {
@@ -157,4 +164,40 @@ padding: 5px 20px 5px 5px;
 table, th, td {
   border: 1px solid black;
   border-collapse: collapse;
+}
+
+.point {
+stroke: none;
+fill: #D3D3D3;
+}
+
+.my-legend .legend-title {
+text-align: left;
+margin-bottom: 5px;
+font-weight: bold;
+font-size: 90%;
+}
+.my-legend .legend-scale ul {
+margin: 0;
+margin-bottom: 5px;
+padding: 0;
+float: left;
+list-style: none;
+}
+.my-legend .legend-scale ul li {
+font-size: 80%;
+list-style: none;
+margin-left: 0;
+line-height: 18px;
+margin-bottom: 2px;
+}
+.my-legend ul.legend-labels li span {
+display: block;
+float: left;
+height: 16px;
+width: 30px;
+margin-right: 5px;
+margin-left: 0;
+border: 1px solid #999;
+opacity: 0.8;
 }
