--- a/style.css
+++ b/style.css
@@ -86,13 +86,54 @@ h1, h2, h3 {
 
 .legend-holder {
 	border: 1px solid black;
+	min-width: 13%;
 	height: 20%;
 	padding: 5px 5px 5px 5px;
 	font-family: Georgia;
+	font-size: 80%;
+	flex: 0 0 10%;
+
+}
+.my-legend {
+	flex: inherit;
+	width: 100%;
+	height: 100%;
 }
 
+.my-legend .legend-title {
+text-align: left;
+margin-bottom: 5px;
+font-weight: bold;
+font-size: 90%;
+}
+.my-legend .legend-scale ul {
+margin: 0;
+margin-bottom: 5px;
+padding: 0;
+float: left;
+list-style: none;
+}
+.my-legend .legend-scale ul li {
+font-size: 80%;
+list-style: none;
+margin-left: 0;
+line-height: 18px;
+margin-bottom: 2px;
+}
+.my-legend ul.legend-labels li span {
+display: block;
+float: left;
+height: 16px;
+width: 30px;
+margin-right: 5px;
+margin-left: 0;
+border: 1px solid #999;
+opacity: 0.8;
+}
+
+
 .linechart-holder {
-  flex: 0 0 50%;
+  flex: 0 0 40%;
 }
 
 .axis line{
@@ -171,33 +212,3 @@ stroke: none;
 fill: #D3D3D3;
 }
 
-.my-legend .legend-title {
-text-align: left;
-margin-bottom: 5px;
-font-weight: bold;
-font-size: 90%;
-}
-.my-legend .legend-scale ul {
-margin: 0;
-margin-bottom: 5px;
-padding: 0;
-float: left;
-list-style: none;
-}
-.my-legend .legend-scale ul li {
-font-size: 80%;
-list-style: none;
-margin-left: 0;
-line-height: 18px;
-margin-bottom: 2px;
-}
-.my-legend ul.legend-labels li span {
-display: block;
-float: left;
-height: 16px;
-width: 30px;
-margin-right: 5px;
-margin-left: 0;
-border: 1px solid #999;
-opacity: 0.8;
-}
