--- a/style.css
+++ b/style.css
@@ -82,6 +82,8 @@ h1, h2, h3 {
   width: 100%;
   height: 100%;
   display: flex;
+  align-self: flex-end;
+  justify-content: flex-start;
 }
 
 .legend-holder {
@@ -200,9 +202,36 @@ font-size: 60%;
 padding: 5px 20px 5px 5px;
 }
 
-table, th, td {
+table {
   border: 1px solid black;
   border-collapse: collapse;
+  /* align-self: flex-end; */
+  align-items: stretch;
+  flex-shrink: .1;
+}
+/* Zebra striping */
+tr:nth-of-type(odd) { 
+	background: #eee; 
+}
+th { 
+	background: #333; 
+	color: white; 
+	font-weight: bold; 
+	cursor: s-resize;
+	background-repeat: no-repeat;
+	background-position: 3% center;
+}
+td, th { 
+	padding: 6px; 
+	border: 1px solid #ccc; 
+	text-align: left; 
+}
+th.des:after {
+  content: "\21E9";
+}
+
+th.aes:after {
+  content: "\21E7";
 }
 
 .point {
