--- a/style.css
+++ b/style.css
@@ -93,12 +93,17 @@ h1, h2, h3 {
 	min-width: 13%;
 	height: 20%;
 	padding: 5px 5px 5px 5px;
-	font-family: Georgia;
-	font-size: 80%;
+	font-size: 100%;
 	flex: 0 0 10%;
 	flex-shrink: .1;
 	align-items: baseline;
 }
+#deselect {
+	background: #ff0000;
+	opacity: 0.5;
+	outline: none;
+}
+
 .my-legend {
 	flex: inherit;
 	width: 100%;
@@ -137,16 +142,44 @@ opacity: 0.8;
 }
 
 .linechart-holder {
-  flex: 0 0 40%;
-  flex-shrink: .1;
+  flex: 0 0.1 40%;
+  /*flex-shrink: .1;*/
 }
 
 
 .barchart-holder {
   flex: 0 0 40%;
-  flex-wrap: wrap;
-  align-self: flex-end;
+  /*flex-wrap: wrap;*/
+  /*align-self: flex-end;*/
+  margin-left: 35px;
 }
+
+.map-table {
+	display: flex;
+	margin-top: 25px;
+
+}
+
+.map-holder{
+	/*flex: 0 0 40%;*/
+	/*display: inline-block;
+	position: relative;*/
+	margin-left: 30px;
+}
+
+.table-holder{
+	/*display: inline-block;*/
+	/*vertical-align: : top;*/
+	float: left;
+	font-size: 100%;
+	margin-left: 25px;
+	visibility: hidden;
+}
+
+td, th {
+	padding: 6px !important;
+}
+
 
 .axis line{
 stroke: #706f6f;
@@ -254,23 +287,27 @@ fill: #D3D3D3;
 .bar { fill: steelblue; }
 
 .tick line{
-      visibility:hidden;
-    }
+  visibility:hidden;
+}
 
-    .grid line {
-    stroke: lightgrey;
-    stroke-opacity: 0.6;
-    shape-rendering: crispEdges
-  }
-
-  
-  .barSelected {
-  	fill: #FF00FF;
-  }
+.grid line {
+stroke: lightgrey;
+stroke-opacity: 0.6;
+shape-rendering: crispEdges
+}
 
 
+.barSelected {
+	fill: #FF00FF;
+}
 
-	.selected {
-		fill: #FF0000;
-		opacity: 0.5;
-	}
+
+.selected {
+	fill: #FF0000;
+	opacity: 0.5;
+	stroke: black;
+	stroke-width: 1.7;
+
+}
+
+
